# aPFAViz

./: ABOUT_APFA  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  eagl_surface.h  engine.cpp  engine.h  font_data.h  midi_parser.cpp  midi_parser.h  native-lib.cpp  note.h  platform.h  renderer.cpp  renderer.h  renderer_es2.h  renderer_es3.cpp  renderer_es3.h  streamer.cpp  streamer.h  synth.cpp  synth.h
app/src/main/java/com/apfa/: MainActivity.kt  PlaybackActivity.kt
app/src/main/res/values/: strings.xml
bassmidi24-android/: bassmidi.txt
